samples/_failures_safe/1761278859_063c2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc66c768.c: In function ‘main’:
./samples/SAFE/__tmp_cc66c768.c:128:18: error: expected ‘)’ at end of input
  128 |         if (fgets
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_cc66c768.c:128:9: error: expected declaration or statement at end of input
  128 |         if (fgets
      |         ^~
./samples/SAFE/__tmp_cc66c768.c:128:9: error: expected declaration or statement at end of input
